--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "next": "12.1.4",
+    "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.4",
