--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^6.2.0",
-    "next": "12.1.4",
+    "next": "^11.0.0",
     "nodemailer": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
