--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^6.2.0",
-    "next": "^11.0.0",
-    "nodemailer": "^5.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "dotenv": "^16.0.0",
+    "next": "12.1.4",
+    "nodemailer": "^6.7.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
