--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.0",
-    "next": "12.1.4",
-    "nodemailer": "^6.7.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/nodemailer": "^6.4.4",
-    "@types/react": "18.0.1",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
-  }
+	"name": "portfolio",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"dotenv": "^6.2.0",
+		"next": "^11.0.0",
+		"nodemailer": "^5.1.1",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.23",
+		"@types/nodemailer": "^6.4.4",
+		"@types/react": "18.0.1",
+		"@types/react-dom": "18.0.0",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.4",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.23",
+		"typescript": "4.6.3"
+	}
 }
