--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	},
 	"dependencies": {
 		"dotenv": "^6.2.0",
-		"next": "^11.0.0",
-		"nodemailer": "^5.1.1",
+		"next": "^12.1.5",
+		"nodemailer": "^6.7.3",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1"
 	},
@@ -21,7 +21,7 @@
 		"@types/react": "18.0.1",
 		"@types/react-dom": "18.0.0",
 		"autoprefixer": "^10.4.4",
-		"eslint": "8.13.0",
+		"eslint": "^8.13.0",
 		"eslint-config-next": "12.1.4",
 		"postcss": "^8.4.12",
 		"tailwindcss": "^3.0.23",
