--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"next": "^12.1.5",
 		"nodemailer": "^6.7.3",
 		"react": "^18.0.0",
-		"react-dom": "^18.0.0"
+		"react-dom": "^18.0.0",
+		"react-spring": "^9.5.2",
+		"react-waypoint": "^10.3.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.23",
