--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-spring": "^9.5.2",
+		"react-transition-group": "^4.4.5",
 		"react-waypoint": "^10.3.0"
 	},
 	"devDependencies": {
@@ -21,6 +22,7 @@
 		"@types/nodemailer": "^6.4.4",
 		"@types/react": "18.0.1",
 		"@types/react-dom": "18.0.0",
+		"@types/react-transition-group": "^4.4.5",
 		"autoprefixer": "^10.4.4",
 		"eslint": "^8.13.0",
 		"eslint-config-next": "12.1.4",
