--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@google-cloud/recaptcha-enterprise": "^3.2.0",
 		"next": "^12.1.5",
 		"nodemailer": "^6.7.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-google-recaptcha": "^2.1.0",
+		"react-google-recaptcha-enterprise": "^1.0.3",
 		"react-spring": "^9.5.2",
 		"react-transition-group": "^4.4.5",
 		"react-waypoint": "^10.3.0"
@@ -22,6 +25,7 @@
 		"@types/nodemailer": "^6.4.4",
 		"@types/react": "18.0.1",
 		"@types/react-dom": "18.0.0",
+		"@types/react-google-recaptcha": "^2.1.5",
 		"@types/react-transition-group": "^4.4.5",
 		"autoprefixer": "^10.4.4",
 		"eslint": "^8.13.0",
