--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.0.14",
 		"next": "^12.1.5",
 		"node-fetch": "^3.3.0",
 		"nodemailer": "^6.7.3",
